# boxs

./: .gitlab-ci.yml  README.md  mkdocs.yml  pyproject.toml  tox.ini
boxs/: __init__.py  api.py  box.py  box_registry.py  checksum.py  cli.py  config.py  data.py  errors.py  filesystem.py  inputs.py  outputs.py  pandas.py  statistics.py  storage.py  tensorflow.py  transform.py  value_types.py
datastock/: __init__.py  api.py  data.py  errors.py  filesystem.py  inputs.py  origin.py  outputs.py  stock.py  stock_registry.py  storage.py
docs/: getting_started.md
test/: test_api.py  test_box.py  test_box_registry.py  test_checksum.py  test_cli.py  test_config.py  test_data.py  test_filesystem.py  test_inputs.py  test_io.py  test_origin.py  test_outputs.py  test_run.py  test_statistics.py  test_stock.py  test_storage.py  test_tensorflow.py  test_transformer.py  test_value_types.py
