[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "datastock"
authors = [
    {name = "Christoph Emonds", email = "chris+git@kant.ai"},
]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: System :: Archiving",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Filesystems",
]
requires-python = ">=3.6"
dynamic = ['version', 'description']
keywords = [
    "machine learning",
    "data",
    "lineage",
    "tracking",
    "track",
    "tracker",
    "history",
    "source",
    "artifact",
    "data science",
    "graph",
    "dependency",
    "dependencies",
]
dependencies = [
]

[project.scripts]

[project.urls]
Documentation = "https://docs.kant.ai/datastock/latest/"
Source = "https://gitlab.com/kantai/datastock/"

[project.optional-dependencies]
test = [
    "tox",
]
docs = [
    "tox",
]
release = [
    "flit",
]
